--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@supabase/supabase-js": "^2.57.4",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.23.12",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
     "phosphor-react": "^1.4.1",
     "react": "^19.1.0",
+    "react-day-picker": "^9.10.0",
     "react-dom": "19.1.0",
+    "react-resizable-panels": "^3.0.6",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
