--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/themes": "^3.2.1",
     "@supabase/supabase-js": "^2.57.4",
     "class-variance-authority": "^0.7.1",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
@@ -22,6 +23,7 @@
     "react-day-picker": "^9.10.0",
     "react-dom": "19.1.0",
     "react-resizable-panels": "^3.0.6",
+    "recharts": "^3.2.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
