--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/themes": "^3.2.1",
     "@supabase/supabase-js": "^2.57.4",
     "class-variance-authority": "^0.7.1",
+    "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
     "input-otp": "^1.4.2",
