--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.55.0",
     "@upstash/ratelimit": "^2.0.6",
     "@vercel/kv": "^3.0.0",
